--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <li> <a href="https://www.w3schools.com/default.asp" alt='W3Schools' target="_blank">W3Schools</a> </li>
             </ul>
             <center>
-                <a href ="https://www.youtube.com/watch?v=UW-7Smk3FlA" target="_blank" > <img src="youtube.png" alt="youtube.png" width='250' height='150'><br> </a>
+            <img src="youtube.png" alt="youtube.png" width='250' height='150'><br>
             <img src="4chan.png" alt="youtube.png" width='200' height='100'><br>
             </center><br><br><br>
-            <center>Click the YouTube Logo for my <strong>favorite</strong> video!</center>
+            
         </div> <!-- WEB DIV -->
         
         <div id="hob">
